--- a/style.css
+++ b/style.css
@@ -4,16 +4,10 @@ body {
     background-color: #F0F0FF;
     color: #404040;
     font-family: Palatino, "Palatino LT STD", "Palatino Linotype", "Book Antiqua", Georgia, serif;
-    font-size: 15px;
-    min-width: 550px;
+    font-size: 28px;
+    line-height: 50px;
     margin-left: 5%;
     margin-right: 5%;
-}
-
-ul {
-    list-style-type: none;
-    margin-left: 0px;
-    padding-left: 5px;
 }
 
 a:link {
@@ -31,36 +25,48 @@ a:hover {
     opacity: 0.6;
 }
 
-.menu {
+#menu {
+    display: none;
+}
+
+#drop_down {
+    position: relative;
+    left: 5%;
+    left: calc(50% - 75px);
     width: 150px;
+    line-height: 35px;
+    text-align: center;
+}
+
+#menu_mobile {
     float: right;
-    font-size: 20px;
-    line-height: 50px;
+    width: 30px;
+    font-size: 50px;
     text-align: center;
     padding-top: 10px;
 }
 
 #t1 {
-    line-height: 50px;
-    color: #404040;
-    font-size: 30px;
     padding-top: 10px;
 }
 
 #l1 {
+    float: left;
     background-color: black;
-    height: 3px;
+    height: 2px;
     width: 100%;
     border-top: solid #eeeeee;
-    border-width: 5px;
+    border-width: 7px;
+    margin-bottom: 14px;
 }
 
 #p1 {
-    width: 75%;
-    padding-left: 12.5%;
-    padding-top: 50px;
+    width: 90%;
+    padding-left: 5%;
+    padding-top: 14px;
     padding-bottom: 10px;
 }
+
 
 @media only screen and (min-width: 600px) {
     /* For tablets: */
@@ -69,6 +75,32 @@ a:hover {
 
 @media only screen and (min-width: 768px) {
     /* For desktop: */
+
+    .m1 {
+        width: 135px;
+        float: right;
+        text-align: center;
+        padding-top: 10px;
+    }
+
+    #menu {
+      display: block;
+      position: relative;
+    }
+
+    #menu_mobile {
+        display: none;
+    }
+
+    #drop_down {
+      display: none;
+    }
+
+    #t1 {
+        float: left;
+        width: 325px;
+        padding-top: 10px;
+    }
 
 }
 
