line padding color

--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ a:hover {
     background-color: black;
     height: 2px;
     width: 100%;
-    border-top: solid #eeeeee;
+    border-top: solid #F0F0FF;
     border-width: 7px;
     margin-bottom: 14px;
 }
