--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,19 +1,14 @@
-<footer class="container-fluid">
-  <div class="container">
-
-    <div class="row-fluid">
-      <div class="span12">
-        <h3>Locations and Contact</h3>
-      </div>
-    </div>
-
-    <div class="row-fluid">
-      <div class="span4  about-box-contact">
-        <p><b>State, USA</b></p>
-        <p>
-        Address L1<br /> Address L2<br /> City, State zip<br /> T: <a href="tel:+888-888-8888">+888 888 8888</a><br> E: <a href="mailto:test@domain.com">test@domain.com</a>
-        </p>
-      </div>
+<div class="container">
+  <div class="card border-light mb-3" style="max-width: 30rem;">
+    <div class="card-body">
+      <h3 class="card-title">Location and Contact</h3>
+      <p class="card-text"></p>
+      <p class="card-text">
+      Address L1<br /> Address L2<br />
+      City, State zip<br />
+      T: <a href="tel:+888-888-8888">+888 888 8888</a><br>
+      E: <a href="mailto:test@domain.com">test@domain.com</a>
+      </p>
     </div>
   </div>
-</footer>
+</div>
