--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,7 +5,7 @@
 
 <div class="container">
   <nav class="navbar navbar-expand-lg navbar-light">
-    <a href="/#" class="navbar-left"><img class="nav-logo" src="assets/uploads/theme/logo.png"></a>
+    <a href="/" class="navbar-left"><img class="nav-logo" src="assets/uploads/theme/logo.png"></a>
     <button class="navbar-toggler custom-toggler" type="button" data-toggle="collapse" data-target="#navbarText">
       <span class="navbar-toggler-icon"></span>
     </button>
